objects/Community__c.object
<CustomObject>
    <label>Community</label>
    <nameField>
        <label>Community Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Allscripts_Id__c</fullName>
        <description>External Id for Allscripts integration</description>
        <inlineHelpText>Use this to lookup Community name for Lead object community field</inlineHelpText>
        <label>Allscripts Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Navihealth_Id__c</fullName>
        <label>Navihealth Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApfmPropertyId__c</fullName>
        <label>ApfmPropertyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCC_Facility_Id__c</fullName>
        <label>PCC Facility Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Rate_AL__c</fullName>
        <inlineHelpText>Base starting rate for AL, used in ChatBot conversations</inlineHelpText>
        <label>Starting Rate AL</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Starting_Rate_IL__c</fullName>
        <inlineHelpText>Base starting rate for IL, used in ChatBot conversations</inlineHelpText>
        <label>Starting Rate IL</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Starting_Rate_MC__c</fullName>
        <inlineHelpText>Base starting rate for MC, used in ChatBot conversations</inlineHelpText>
        <label>Starting Rate MC</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Sales_Goal__c</fullName>
        <label>Annual Sales Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Call_Goal__c</fullName>
        <label>Monthly Call Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartnerPropertyId__c</fullName>
        <label>PartnerPropertyId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_URL_Name__c</fullName>
        <label>Community URL Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Sales_Goal__c</fullName>
        <label>Monthly Sales Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Long_Name__c</fullName>
        <label>Community Long Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Attrition_Budget__c</fullName>
        <label>Annual Attrition Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Occupancy_Budget__c</fullName>
        <label>Annual Occupancy Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Attrition_Budget__c</fullName>
        <label>Monthly Attrition Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_User_for_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary User for Community</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Communities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>